Added js to show selected file Added route alias 'import' for form

--- a/data_normalizer/app/views/data_importer/import.html.slim
+++ b/data_normalizer/app/views/data_importer/import.html.slim
@@ -1,2 +1,3 @@
-h1 DataImporter#import
-p Find me in app/views/data_importer/import.html.slim
+h1.text-center Total Amount Gross Revenue 
+p
+	h3.text-center $00.00
