Changed button label

--- a/data_normalizer/app/views/data_importer/index.html.slim
+++ b/data_normalizer/app/views/data_importer/index.html.slim
@@ -13,4 +13,4 @@ p
     span.help-block style='padding-bottom: 20px'
       | Browse and select a tab delimited file
     div
-      = submit_tag 'Submit', class: 'btn btn-primary'
+      = submit_tag 'Import', class: 'btn btn-primary'
