--- a/data_normalizer/app/views/data_importer/import.html.slim
+++ b/data_normalizer/app/views/data_importer/import.html.slim
@@ -1,3 +1,5 @@
 h1.text-center Total Amount Gross Revenue 
 p
-	h3.text-center $00.00
+	h2.text-center style="padding-bottom:30px"
+		= number_to_currency @total_amount_gross
+	h4.text-center = link_to 'Import Another Document', data_importer_index_path, class: 'text-center'
